--- a/example/index.html
+++ b/example/index.html
@@ -18,6 +18,7 @@
                     <div class="onoffswitch-switch"></div>
                 </label>
             </div>
+            <div id="steps"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
