--- a/example/index.html
+++ b/example/index.html
@@ -5,11 +5,11 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>M7StepCounter Plugin Example</title>
+        <title>M7StepCounter Example</title>
     </head>
     <body>
         <div id="container">
-            <div id="title">M7StepCounter Plugin Example</div>
+            <div id="title">M7StepCounter Example</div>
             <div id="status"></div>
             <div class="onoffswitch">
                 <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" onclick="onSwitch()" unchecked>
