add <div> for steps (today and weekly)

--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,8 @@
                     <div class="onoffswitch-switch"></div>
                 </label>
             </div>
-            <div id="steps"></div>
+            <div id="today"></div>
+            <div id="weekly"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
